[package]
name = "deployment-tool"
version = "0.1.0"
authors = ["mamazu <14860264+mamazu@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.48"
